--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
   "files.associations": {
     "ostream": "cpp",
     "iostream": "cpp",
-    "new": "cpp"
+    "new": "cpp",
+    "chrono": "cpp"
   }
 }
